# hack-vdr-desktop

./: .gitignore  package-lock.json  vdr-desktop.code-workspace
backend/: main.py  requirements.txt  utils.py
vdr-desktop-app/: package-lock.json  package.json  tailwind.config.js
vdr-desktop-app/src/: App.tsx
vdr-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
vdr-desktop-app/src-tauri/src/: main.rs
vdr-desktop-ele/: .gitignore  README.MD  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json
vdr-desktop-ele/src/components/: AISidePanel.tsx
vdr-desktop-ele/src/components/ui/: button.tsx  card.tsx  input.tsx
vdr-desktop-ele/src/main/: main.ts
vdr-desktop-ele/src/preload/: preload.ts
vdr-desktop-ele/src/renderer/: App.css  App.tsx
